--- a/index.html
+++ b/index.html
@@ -879,36 +879,51 @@
             return 'Other';
         }
 
-        // Get clean image name for display
+        // Get clean image name for display (hover text)
         function getImageDisplayName(filename) {
             const nameWithoutExt = filename.replace('.jpg', '');
             const type = getImageType(filename);
 
-            // Remove the anime ID and type to get the descriptive part
+            // Remove the anime ID part to get the descriptive part
             let displayName = nameWithoutExt;
+
+            // Remove the anime ID prefix (everything before the type suffix)
             const typeSuffixes = ['-card', '-poster', '-character', '-screenshot'];
 
             for (const suffix of typeSuffixes) {
                 if (displayName.includes(suffix)) {
-                    displayName = displayName.replace(suffix, '');
+                    // Extract everything after the type suffix
+                    displayName = displayName.split(suffix)[1];
                     break;
                 }
             }
 
-            // Remove the anime ID part (we already have the series name)
-            const animeIdMatch = displayName.match(/^([^-]+-?)+/);
-            if (animeIdMatch) {
-                displayName = displayName.replace(animeIdMatch[0], '').replace(/^-/, '');
-            }
-
-            // Format for display
+            // If no type suffix found or nothing after suffix, try alternative approach
             if (!displayName || displayName === '') {
-                return type.slice(0, -1); // Remove 's' from type
+                // Try to extract the last part after the last hyphen
+                const parts = nameWithoutExt.split('-');
+                if (parts.length > 1) {
+                    displayName = parts[parts.length - 1];
+                } else {
+                    return type.slice(0, -1); // Remove 's' from type
+                }
             }
 
-            return displayName.split('-')
-                .map(word => word.charAt(0).toUpperCase() + word.slice(1))
-                .join(' ');
+            // Remove leading hyphen if present
+            displayName = displayName.replace(/^-/, '');
+
+            // Format for display based on type
+            if (type === 'Character') {
+                // For characters: replace underscores with spaces and capitalize each word
+                return displayName.split('_')
+                    .map(word => word.charAt(0).toUpperCase() + word.slice(1))
+                    .join(' ');
+            } else {
+                // For cards, posters, screenshots: replace hyphens with spaces and capitalize
+                return displayName.split('-')
+                    .map(word => word.charAt(0).toUpperCase() + word.slice(1))
+                    .join(' ');
+            }
         }
 
         // Get image quality info for display
@@ -1228,18 +1243,18 @@
             const qualityInfo = getImageQualityInfo(filename);
 
             card.innerHTML = `
-                <img src="" alt="${displayName}" loading="lazy" class="card-image">
-                <div class="anime-card-overlay">
-                    <div class="play-icon"><i class="fas fa-copy"></i></div>
-                    <h3 class="card-title">${displayName}</h3>
-                    <p class="card-meta">${qualityInfo}</p>
-                </div>
-                <!-- Card Watermark -->
-                <div class="watermark card-watermark">
-                    <img src="icons/amv-icon.png" alt="AMVVerse Watermark" class="watermark-logo">
-                </div>
-                <div class="premium-tag">${qualityInfo}</div>
-            `;
+        <img src="" alt="${displayName}" loading="lazy" class="card-image">
+        <div class="anime-card-overlay">
+            <div class="play-icon"><i class="fas fa-copy"></i></div>
+            <h3 class="card-title">${displayName}</h3>
+            <p class="card-meta">${qualityInfo}</p>
+        </div>
+        <!-- Card Watermark -->
+        <div class="watermark card-watermark">
+            <img src="icons/amv-icon.png" alt="AMVVerse Watermark" class="watermark-logo">
+        </div>
+        <div class="premium-tag">${qualityInfo}</div>
+    `;
 
             // Copy URL functionality
             card.addEventListener('click', () => {
