--- a/upload.html
+++ b/upload.html
@@ -795,12 +795,8 @@
             </button>
         </div>
         <ul>
-            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="upload.html"><i class="fas fa-upload"></i> Upload</a></li>
-            <li><a href="#"><i class="fas fa-heart"></i> Favorites</a></li>
-            <li><a href="#"><i class="fas fa-history"></i> History</a></li>
-            <li><a href="#"><i class="fas fa-cog"></i> Settings</a></li>
-            <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li>
+            <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="/upload"><i class="fas fa-upload"></i> Upload</a></li>
         </ul>
     </div>
 
