--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
             <button class="close-modal" id="closeModal"><i class="fas fa-times"></i></button>
             <img id="modalImage" src="" alt="Zoomed Image">
             <div class="modal-actions">
-                <button class="modal-btn" id="downloadBtn"><i class="fas fa-download"></i> Preview</button>
+                <button class="modal-btn" id="downloadBtn"><i class="fas fa-download"></i> Download</button>
                 <button class="modal-btn" id="copyBtn"><i class="fas fa-copy"></i> Copy</button>
             </div>
         </div>
@@ -1734,5 +1734,6 @@
         }
     </script>
 </body>
+
 
 </html>
