--- a/upload.html
+++ b/upload.html
@@ -8,12 +8,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>𝙵𝚒𝚕𝚎 𝙿𝚛𝚎𝚟𝚒𝚎𝚠 | 𝙰𝙼𝚅 𝚅𝙴𝚁𝚂𝙴</title>
-    <link rel="manifest" href="manifest.json">
-    <script src="data.js"></script>
+    <link rel="manifest" href="/manifest.json">
+    <script src="/data.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="icons/icon.png" type="png/image/x-icon">
-    <link rel="apple-touch-icon" href="icons/icon.png">
+    <link rel="icon" href="/icons/icon.png" type="png/image/x-icon">
+    <link rel="apple-touch-icon" href="/icons/icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -779,8 +779,9 @@
                     <input type="text" id="Search" placeholder="Search id...">
                     <button><i class="fas fa-search"></i></button>
                 </div>
-                <button class="mobile-menu-toggle">
+                <button href="/" class="mobile-menu-toggle">
                     <i class="fas fa-home"></i>
+
                 </button>
             </div>
         </div>
