--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>𝙵𝚒𝚕𝚎 𝙼𝚊𝚗𝚊𝚐𝚎𝚛 | 𝙰𝙼𝚅 𝚅𝙴𝚁𝚂𝙴</title>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://animesaga.pages.dev/dxh2jf6f8shlldyq6lpo4exgdq/d2hs6ea0ct0of8shlanv6lpo4eygdq.js"></script>
-    <script src="/data.js"></script>
-    <link rel="icon" href="/icons/icon.png" type="png/image/x-icon">
-    <link rel="apple-touch-icon" href="/icons/icon.png">
+    <script src="data.js"></script>
+    <link rel="icon" href="icons/icon.png" type="png/image/x-icon">
+    <link rel="apple-touch-icon" href="icons/icon.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <style>
@@ -875,13 +875,26 @@
                     <input type="text" id="search" placeholder="Search images...">
                     <button><i class="fas fa-search"></i></button>
                 </div>
-                <button href="/upload" class="mobile-menu-toggle">
-                    <i class="fas fa-upload"></i>
+                <button id="mobile-menu-toggle" class="mobile-menu-toggle">
+                    <i class="fas fa-bars"></i>
                 </button>
             </div>
         </div>
     </header>
 
+    <!-- Side Menu -->
+    <div class="side-menu" id="sideMenu">
+        <div class="side-menu-header">
+            <div class="side-menu-logo">𝙰𝙼𝚅 𝚅𝙴𝚁𝚂𝙴</div>
+            <button class="close-menu" id="closeMenu">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <ul>
+            <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="upload.html"><i class="fas fa-upload"></i> Upload</a></li>
+        </ul>
+    </div>
 
     <!-- Overlay -->
     <div class="overlay" id="overlay"></div>
