--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
                 this.CARDS_PER_PAGE = 20;
                 this.SCROLL_THRESHOLD = 100;
                 this.IMAGE_LOAD_DELAY = 50;
-                this.prefix = "https://amvverse-image-data.pages.dev/images/";
+                this.prefix = "https://d2dx.netlify.app/";
                 this.currentPage = 0;
                 this.isLoading = false;
                 this.imageLoadQueue = [];
