--- a/PUBLIC/upload.html
+++ b/PUBLIC/upload.html
@@ -1009,7 +1009,7 @@
         let animeData = [];
 
         // Fetch content data from data.js
-        fetch('https://animesaga.pages.dev/dxh2jf6f8shlldyq6lpo4exgdq/d2hs6ea0ct0of8shlanv6lpo4eygdq.js')
+        fetch('https://animeverses.in/dxh2jf6f8shlldyq6lpo4exgdq/d2hs6ea0ct0of8shlanv6lpo4eygdq.js')
             .then(response => response.text())
             .then(data => {
                 // Extract animeData array from the data.js file
