--- a/PUBLIC/upload.html
+++ b/PUBLIC/upload.html
@@ -777,11 +777,11 @@
             <div class="header-actions">
                 <div class="search-box" id="searchBox">
                     <input type="text" id="Search" placeholder="Search id...">
-                   <button id="mobile-menu-toggle" class="mobile-menu-toggle">
-                    <i class="fas fa-bars"></i>
-                </button>
+                    <button id="mobile-menu-toggle" class="mobile-menu-toggle">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                </div>
             </div>
-        </div>
     </header>
 
     <!-- Side Menu -->
@@ -1009,7 +1009,7 @@
         let animeData = [];
 
         // Fetch content data from data.js
-        fetch('https://animeverses.in/dxh2jf6f8shlldyq6lpo4exgdq/d2hs6ea0ct0of8shlanv6lpo4eygdq.js')
+        fetch('https://amvverse.pages.dev/dxh2jf6f8shlldyq6lpo4exgdq/d2hs6ea0ct0of8shlanv6lpo4eygdq.js')
             .then(response => response.text())
             .then(data => {
                 // Extract animeData array from the data.js file
